--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Jobbot API exercise</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto+Mono:100,300,400" rel="stylesheet">
+	<link rel="stylesheet" href="assets/vendors/fontawesome/css/fontawesome-all.min.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -13,7 +15,7 @@
 3. Under comments show button "load more" to display last 10 comments.
 -->
 	<div class="container">
-		<h1>Jobbot Exercise</h1>
+		<div class="header"><h1>Jobbot Exercise</h1></div>
 
 		<div class="posts-container">
 			
