--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 2. For each post show 3 related comments.
 3. Under comments show button "load more" to display last 10 comments.
 -->
+
 	<div class="container">
 		<div class="header"><h1>Jobbot Exercise</h1></div>
 
@@ -22,6 +23,7 @@
 		</div>
 	</div>
 
+<!-- <script src="assets/js/main.js"></script> -->
 <script src="assets/js/main.js"></script>
 </body>
 </html>
